--- a/FileRenamer/FileRenamer/Views/App.xaml
+++ b/FileRenamer/FileRenamer/Views/App.xaml
@@ -1,9 +1,4 @@
-﻿<Application x:Class="FileRenamer.App"
+﻿<Application x:Class="FileRenamer.Views.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:FileRenamer"
-             StartupUri="MainWindow.xaml">
-    <Application.Resources>
-         
-    </Application.Resources>
-</Application>
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"/>
+
