--- a/FileRenamer/FileRenamer/MainWindow.xaml
+++ b/FileRenamer/FileRenamer/MainWindow.xaml
@@ -18,6 +18,7 @@
             <RowDefinition Height="40" />
             <RowDefinition Height="40" />
             <RowDefinition Height="40" />
+            <RowDefinition Height="40" />
         </Grid.RowDefinitions>
         <StackPanel
             Grid.Row="0"
@@ -89,6 +90,19 @@
                 VerticalAlignment="Center"
                 Click="RenameFile"
                 Content="RENAME FILE" />
+        </StackPanel>
+        <StackPanel
+            Grid.Row="4"
+            Grid.ColumnSpan="2"
+            VerticalAlignment="Center"
+            Orientation="Horizontal">
+            <Button
+                Width="150"
+                Height="30"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Center"
+                Click="DebugRectangleRegion"
+                Content="DEBUG RECTANGLE REGION" />
         </StackPanel>
     </Grid>
 </Window>
